feat: Add extracted text handling in Document entity and service; update database schema